--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.0.0",
   "dependencies": {},
   "devDependencies": {
-    "grunt": "~0.4.1",
-    "grunt-contrib-copy": "~0.4.1",
-    "grunt-contrib-concat": "~0.1.3",
-    "grunt-shell": "~0.3.1",
-    "grunt-contrib-connect": "~0.4.0",
-    "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-watch": "~0.5.2",
-    "grunt-open": "~0.2.0",
-    "load-grunt-tasks": "~0.1.0",
-    "matchdep": "~0.1.1",
-    "time-grunt": "~0.1.1"
+    "grunt": "latest",
+    "grunt-contrib-copy": "latest",
+    "grunt-contrib-concat": "latest",
+    "grunt-shell": "latest",
+    "grunt-contrib-connect": "latest",
+    "grunt-contrib-clean": "latest",
+    "grunt-contrib-watch": "latest",
+    "grunt-open": "latest",
+    "load-grunt-tasks": "latest",
+    "matchdep": "latest",
+    "time-grunt": "latest",
+    "grunt-glob": "latest"
   },
   "engines": {
     "node": ">=0.8.0"
